fix(sidebar): sidebar image was absent

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -51,7 +51,7 @@
       "questionnaires": "Questionnaires",
       "profile": "Your profile",
       "professional": "Your professional",
-      "logout": "Signout"
+      "logout": "Sign Out"
     },
     "professional": {
       "patients": "Your Patients",
