--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -73,5 +73,19 @@
     "logout": "Déconnexion",
     "about": "À propos",
     "login": "Connexion"
+  },
+  "register": {
+    "passwordError": "Les mots de passe ne correspondent pas",
+    "title": "S'inscrire dans l'application",
+    "firstName": "Prénom",
+    "lastName": "Nom",
+    "language": "Langue",
+    "gender": "Genre",
+    "dob": "Date de Naissance",
+    "email": "Courriel",
+    "password": "Mot de passe",
+    "passwordConfirmation": "Confirmez votre mot de passe",
+    "consent": "Je consent a cela",
+    "submit": "Soumettre"
   }
 }
