--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -28,7 +28,7 @@
   "patient": {
     "questionnaireList": {
       "title": "Questionnaires to fill out",
-      "description": "Click on the pen icon to start filling a questionnaire"
+      "description": "Click on the button to start filling a questionnaire"
     },
     "profile": {
       "title": "Edit profile",
