feat(client): integrated material ui to professional

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -72,7 +72,8 @@
     "preferences": "Preferences",
     "logout": "Sign out",
     "about": "About This Application",
-    "login": "Sign In"
+    "login": "Sign In",
+    "builder": "Builder"
   },
   "register": {
     "passwordError": "Passwords do not match",
