--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -73,7 +73,9 @@
       "gender": "Genre",
       "back": "Retour",
       "filledQuestionnaires": "Questionnaires Complétés",
-      "useID": "Utiliser les identifiants de question abrégés"
+      "useID": "Utiliser les identifiants de question abrégés",
+      "sendQuestionnaire": "Envoyer un questionnaire à remplir",
+      "pendingQuestionnaires": "Questionnaires envoyés en attente d'être remplis"
     }
   },
   "sidebar": {
