--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -75,7 +75,10 @@
       "filledQuestionnaires": "Filled Questionnaires",
       "useID": "Use abbreviated question identifiers",
       "sendQuestionnaire": "Send a questionnaire to fill",
-      "pendingQuestionnaires": "Pending questionnaires to fill"
+      "pendingQuestionnaires": "Pending questionnaires to fill",
+      "Male": "Male",
+      "Female": "Female",
+      "Other": "Other"
     }
   },
   "sidebar": {
