feat(professional): date sent translation

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -79,7 +79,8 @@
       "pendingQuestionnaires": "Pending questionnaires to fill",
       "Male": "Male",
       "Female": "Female",
-      "Other": "Other"
+      "Other": "Other",
+      "dateSent": "Date sent"
     }
   },
   "sidebar": {
