feat(client): Questionnaire Deletion
The professional can now remove a questionnaire from the list of
questionnaires to fill

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -80,7 +80,8 @@
       "Male": "Male",
       "Female": "Female",
       "Other": "Other",
-      "dateSent": "Date sent"
+      "dateSent": "Date sent",
+      "remove": "Remove"
     }
   },
   "sidebar": {
