fix(client): translation
Fixed none and export translations

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -81,7 +81,9 @@
       "Female": "Female",
       "Other": "Other",
       "dateSent": "Date sent",
-      "remove": "Remove"
+      "remove": "Remove",
+      "none": "None",
+      "export": "Export to PDF"
     }
   },
   "sidebar": {
