--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -81,7 +81,9 @@
       "Female": "Femme",
       "Other": "Autre",
       "dateSent": "Date d'envoi",
-      "remove": "Retirer"
+      "remove": "Retirer",
+      "none": "Aucun",
+      "export": "Exporter au format PDF"
     }
   },
   "sidebar": {
