feat(client): Ability to choose and specify another gender

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -110,6 +110,10 @@
     "password": "Password",
     "passwordConfirmation": "Confirm your password",
     "consent": "I consent to this",
-    "submit": "Submit"
+    "submit": "Submit",
+    "male": "Male",
+    "female": "Female",
+    "other": "Other",
+    "genderOther": "Specify your gender"
   }
 }
