feat(client): forgot component and email form

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -96,7 +96,8 @@
     "logout": "Sign out",
     "about": "About This Application",
     "login": "Sign In",
-    "builder": "Builder"
+    "builder": "Builder",
+    "forgot": "Forgot Password"
   },
   "register": {
     "passwordError": "Passwords do not match",
