fix(client): translations and other fixes
Closes #35

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -61,7 +61,24 @@
       "phone": "Phone Number",
       "yourDescription": "Your description",
       "language": "Language",
-      "submit": "Update Preferences"
+      "submit": "Update Preferences",
+      "about": "About your practice",
+      "yearDegree": "Year of chiropractic degree obtention",
+      "country": "Choose a country",
+      "otherDegree": "In addition to your chiropractic undergraduate degree, have you completed",
+      "bsc": "BSc degree",
+      "msc": "MSc degree",
+      "phd": "PhD degree",
+      "chiropracticSpecialtyDegree": "Chiropractic specialty degree",
+      "postGraduateDiploma": "Post graduate diploma / micro-program",
+      "nbPatients": "Your mean number of patient visit per week",
+      "describe": "Describe your practice",
+      "solo": "Solo practitioner",
+      "otherChiros": "Other chiropractor(s) at practice",
+      "otherNonChiropractic": "Other non-chiropractic healthcare practitioner available at same location",
+      "approach": "Could you please indicate which treatment approach you usemost frequently. These treatment options will appear in the section related to your patients Plan of Management.",
+      "manipulative": "Manipulative / Ajustive techniques & procedure",
+      "nonAdjustive": "Non adjustive techniques & procedures"
     },
     "patient": {
       "view": "view",
@@ -138,5 +155,118 @@
     "redflags": "Red Flags Screening",
     "commorbidities": "Commorbidities",
     "familyHistory": "Family History"
+  },
+  "report": {
+    "newReport": "New report",
+    "age": "Age",
+    "name": "Patient's Name",
+    "date": "Date",
+    "professional": "Professional's Name",
+    "profession": "Profession",
+    "civilStatus": "Civil status",
+    "nbChildrens": "Number of childrens",
+    "occupation": "Occupation",
+    "employmentStatus": "Employment Status",
+    "chiefComplaint": "Chief complaint",
+    "chiefComplaintfr": "Chief complaint",
+    "onsetDate": "Date of onset",
+    "onsetType": "Type of onset",
+    "injuryMechanism": "Mecanism of injury",
+    "evolution": "Evolution",
+    "recurrence": "Recurrence",
+    "secondaryComplaints": "Secondary complaints",
+    "comorbidity": "Comorbidity",
+    "isReveivingTreatment": "Is receiving treatment",
+    "activityLimitation": "Activity limitaion",
+    "commorbidityHeart": "Heart disease",
+    "commorbidityBloodPressure": "High blood pressure",
+    "commorbidityLungDisease": "Lung disease",
+    "commorbidityDiabetes": "Diabetes",
+    "commorbidityUlcer": "Ulcer or stomach disease",
+    "commorbidityKidney": "Kidney disease",
+    "commorbidityLiver": "Liver disease",
+    "commorbidityAnemia": "Anemia or other blood disease",
+    "commorbidityCancer": "Cancer",
+    "commorbidityDepression": "Depression",
+    "commorbidityOsteoarthritis": "Osteoarthritis, degenerative arthritis",
+    "commorbidityRheumatoidArthritis": "Rheumatoid arthritis",
+    "redFlags": "Red flags",
+    "relevantScores": "Relevant scores",
+    "scores": {
+      "pain": "Pain",
+      "interference": "Interference",
+      "total": "Total",
+      "sub": "Subtotal",
+      "risk": "Risk",
+      "disability/symptom": "Disability/symptom",
+      "work": "Work",
+      "sport": "Sport"
+    },
+    "healthQuality": "Perceived health quality",
+    "qualityOfLife": "Perceived quality of life",
+    "healthSatisfaction": "Perceived health satisfaction",
+    "gecPain": "Global expectation of change (Pain)",
+    "gecFunction": "Global expectation of change (Function)",
+    "gecQualityOfLife": "Global expectation of change (Quality of life)",
+    "comments": "Comments",
+    "diagnosis": "Diagnosis",
+    "nbTx": "Number of treatments",
+    "frequency": "Treatment frequency",
+    "intensive": "Intensive",
+    "periodic": "Periodic",
+    "prn": "PRN",
+    "objectives": "Objective(s)",
+    "painRelieving": "Pain relieving",
+    "improveFunction": "Improve function",
+    "readaptation": "Readaptation",
+    "maintenance": "Maintenance",
+    "prevention": "Prevention",
+    "therapeuticTrial": "Therapeutic trial",
+    "planOfManagement": "Plan of Management",
+    "techniques": {
+      "diversified": "Diversified",
+      "extremityManipulating": "Extremity Manipulating / Adjusting",
+      "activatorMethod": "Adjustive Instrument: Activator method",
+      "arthroStim": "Adjustive Instrument: ArthroStim",
+      "impulseAdjustingInstrument": "Adjustive Instrument: Impulse adjusting instrument",
+      "gonstead": "Gonstead",
+      "cox": "Cox flexion/distraction",
+      "thompson": "Thompson",
+      "sot": "Sacro-Occipital Technique (SOT)",
+      "hio": "HIO / Atlas Orthogonal",
+      "nimmo-tonus": "Nimmo-Tonus",
+      "loganBasic": "Logan Basic",
+      "meric": "Meric",
+      "pierce-stillwagon": "Pierce-Stillwagon",
+      "mobilization": "Mobilization/ Manual traction",
+      "graston": "Soft-tissue therapy: Graston",
+      "myofascialRelease": "Soft-tissue therapy: ART / myofascial release",
+      "ischemicCompression": "Soft-tissue therapy: Ischemic compression / trigger point therapy",
+      "massageTherapy": "Soft-tissue therapy: Massage therapy",
+      "motorizedTraction": "Motorized traction / spinal decompression",
+      "formalPatientEducation": "Formal patient education",
+      "ergonomicInstructions": "Ergonomic instructions",
+      "nutritionalCounseling": "Nutritional counseling",
+      "exerciseInstruction": "Exercise instruction / prescription",
+      "cold": "Cold / ice",
+      "heat": "Heat",
+      "orthotics": "Orthotics/ lifts",
+      "orthopedicSupports": "Orthopedic supports / Brace",
+      "casting": "Casting/ Taping",
+      "electricalStimulation": "Electrical stimulation",
+      "interferentialCurrent": "Interferential current",
+      "directCurrent": "Direct Current",
+      "diathermy": "Diathermy",
+      "ultrasound": "Ultrasound",
+      "acupuncture": "Acupuncture",
+      "dryNeedling": "Dry needling",
+      "shockwave": "Shockwave",
+      "coldLaser": "Cold laser",
+      "other": "Other"
+    },
+    "other": "Other (separate by comma)",
+    "externalConsultation": "External Consultation",
+    "gecc": "Global Expectation Of Clinical Change",
+    "none": "None"
   }
 }
