--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -61,7 +61,24 @@
       "phone": "Numéro de Téléphone",
       "yourDescription": "Votre description",
       "language": "Langue",
-      "submit": "Mettre À Jour"
+      "submit": "Mettre À Jour",
+      "about": "À propos de votre pratique",
+      "yearDegree": "Année d'obtention du diplôme en chiropratique",
+      "country": "Choisissez un pays",
+      "otherDegree": "En plus de votre diplôme de premier cycle en chiropratique, avez-vous obtenu",
+      "bsc": "Baccalauréat (BSc)",
+      "msc": "Diplôme de maîtrise (MSc)",
+      "phd": "Doctorat (PhD)",
+      "chiropracticSpecialtyDegree": "Diplôme de spécialité chiropratique",
+      "postGraduateDiploma": "Diplôme d'études post-graduée / micro-programme",
+      "nbPatients": "Votre nombre moyen de visites de patients par semaine",
+      "describe": "Décrivez votre pratique",
+      "solo": "Praticien seul",
+      "otherChiros": "Autre(s) chiropraticien(s) au cabinet",
+      "otherNonChiropractic": "Autre professionnel de la santé non-chiropratique disponible au même endroit",
+      "approach": "Pourriez-vous s'il vous plaît indiquer quelle approche de traitement vous utilisez le plus fréquemment. Ces options de traitement apparaîtront dans la section relative au plan de gestion de vos patients.",
+      "manipulative": "Techniques et procédures manipulatrices/ajustives",
+      "nonAdjustive": "Techniques et procédures non ajustives"
     },
     "patient": {
       "view": "voir",
@@ -138,5 +155,117 @@
     "redflags": "Drapeaux Rouges",
     "commorbidities": "Commorbidités",
     "familyHistory": "Antécédants Familiaux"
+  },
+  "report": {
+    "newReport": "Nouveau rapport",
+    "age": "Âge",
+    "name": "Nom du patient",
+    "date": "Date",
+    "professional": "Nom du professionnel",
+    "profession": "Profession",
+    "civilStatus": "Statut civil",
+    "nbChildrens": "Numbre d'enfants",
+    "occupation": "Occupation",
+    "employmentStatus": "Statut d'emploi",
+    "chiefComplaint": "Motif de consultation principal",
+    "onsetDate": "Date de début",
+    "onsetType": "Apparition",
+    "injuryMechanism": "Mécanisme d'apparition",
+    "evolution": "Évolution",
+    "recurrence": "Récurrence",
+    "secondaryComplaints": "Motifs de consultation secondaires",
+    "comorbidity": "Comorbidités",
+    "isReveivingTreatment": "Reçoie un traitement",
+    "activityLimitation": "Limitation d'activités",
+    "commorbidityHeart": "Condition cardiaque",
+    "commorbidityBloodPressure": "Haute pression artérielle",
+    "commorbidityLungDisease": "Maladie pulmonaire",
+    "commorbidityDiabetes": "Diabète",
+    "commorbidityUlcer": "Ulcer ou maux d’estomac",
+    "commorbidityKidney": "Maladie rénale",
+    "commorbidityLiver": "Maladie du foie",
+    "commorbidityAnemia": "Anémie ou autre maladie du sang",
+    "commorbidityCancer": "Cancer / tumeur",
+    "commorbidityDepression": "Dépression",
+    "commorbidityOsteoarthritis": "Ostéoarthrite, arthrite dégénérative",
+    "commorbidityRheumatoidArthritis": "Arthrite rhumatoïde",
+    "redFlags": "Drapeaux rouges",
+    "relevantScores": "Pointages utiles",
+    "scores": {
+      "pain": "Douleur",
+      "interference": "Interférence",
+      "total": "Total",
+      "sub": "Subtotal",
+      "risk": "Risque",
+      "disability/symptom": "Incapacité/Symptômes",
+      "work": "Travail",
+      "sport": "Sport"
+    },
+    "healthQuality": "Qualité de santé perçue",
+    "qualityOfLife": "Qualité de vie perçue",
+    "healthSatisfaction": "Satisfaction de la santé perçue",
+    "gecPain": "Attentes globales de changement (Douleur)",
+    "gecFunction": "Attentes globales de changement (Fonction)",
+    "gecQualityOfLife": "Attentes globales de changement (Qualité de vie)",
+    "comments": "Commentaires",
+    "diagnosis": "Diagnostique",
+    "nbTx": "Nombre de traitements",
+    "frequency": "Fréquence des traitements",
+    "intensive": "Intensifs",
+    "periodic": "Périodiques",
+    "prn": "PRN",
+    "objectives": "Objectif(s)",
+    "painRelieving": "Soulagement de la douleur",
+    "improveFunction": "Améliorer les capacités",
+    "readaptation": "Réadaptation",
+    "maintenance": "Maintenance",
+    "prevention": "Prévention",
+    "therapeuticTrial": "Essai thérapeutique",
+    "planOfManagement": "Plan de gestion",
+    "techniques": {
+      "diversified": "Diversified",
+      "extremityManipulating": "Extremity Manipulating / Adjusting",
+      "activatorMethod": "Adjustive Instrument: Activator method",
+      "arthroStim": "Adjustive Instrument: ArthroStim",
+      "impulseAdjustingInstrument": "Adjustive Instrument: Impulse adjusting instrument",
+      "gonstead": "Gonstead",
+      "cox": "Cox flexion/distraction",
+      "thompson": "Thompson",
+      "sot": "Sacro-Occipital Technique (SOT)",
+      "hio": "HIO / Atlas Orthogonal",
+      "nimmo-tonus": "Nimmo-Tonus",
+      "loganBasic": "Logan Basic",
+      "meric": "Meric",
+      "pierce-stillwagon": "Pierce-Stillwagon",
+      "mobilization": "Mobilization/ Manual traction",
+      "graston": "Soft-tissue therapy: Graston",
+      "myofascialRelease": "Soft-tissue therapy: ART / myofascial release",
+      "ischemicCompression": "Soft-tissue therapy: Ischemic compression / trigger point therapy",
+      "massageTherapy": "Soft-tissue therapy: Massage therapy",
+      "motorizedTraction": "Motorized traction / spinal decompression",
+      "formalPatientEducation": "Formal patient education",
+      "ergonomicInstructions": "Ergonomic instructions",
+      "nutritionalCounseling": "Nutritional counseling",
+      "exerciseInstruction": "Exercise instruction / prescription",
+      "cold": "Cold / ice",
+      "heat": "Heat",
+      "orthotics": "Orthotics/ lifts",
+      "orthopedicSupports": "Orthopedic supports / Brace",
+      "casting": "Casting/ Taping",
+      "electricalStimulation": "Electrical stimulation",
+      "interferentialCurrent": "Interferential current",
+      "directCurrent": "Direct Current",
+      "diathermy": "Diathermy",
+      "ultrasound": "Ultrasound",
+      "acupuncture": "Acupuncture",
+      "dryNeedling": "Dry needling",
+      "shockwave": "Shockwave",
+      "coldLaser": "Cold laser",
+      "other": "Other"
+    },
+    "other": "Autres (séparés par des virgules)",
+    "externalConsultation": "Consultation externe",
+    "gecc": "Attentes globales de changement clinique",
+    "none": "Aucun"
   }
 }
