feat(api): score calculator for follow-up

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -111,7 +111,8 @@
         "risk": "Risk",
         "work": "Work",
         "sport": "Sport",
-        "disability/symptom": "Disability/Symptom"
+        "disability/symptom": "Disability/Symptom",
+        "globalImpressionOfChange": "Global Impression of Change"
       },
       "reports": "Reports",
       "newReport": "New report"
