feat(client): conditional date selector

--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -94,6 +94,7 @@
       "filledQuestionnaires": "Questionnaires Complétés",
       "useID": "Utiliser les identifiants de question abrégés",
       "sendQuestionnaire": "Envoyer un questionnaire à remplir",
+      "scheduled": "Choisir une date future",
       "pendingQuestionnaires": "Questionnaires envoyés en attente d'être remplis",
       "Male": "Homme",
       "Female": "Femme",
