--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -94,6 +94,7 @@
       "filledQuestionnaires": "Filled Questionnaires",
       "useID": "Use abbreviated question identifiers",
       "sendQuestionnaire": "Send a questionnaire to fill",
+      "scheduled": "Schedule a date in the future",
       "pendingQuestionnaires": "Pending questionnaires to fill",
       "Male": "Male",
       "Female": "Female",
