--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -95,6 +95,7 @@
       "useID": "Utiliser les identifiants de question abrégés",
       "sendQuestionnaire": "Envoyer un questionnaire à remplir",
       "scheduled": "Choisir une date future",
+      "selectDates": "Choisissez les dates",
       "pendingQuestionnaires": "Questionnaires envoyés en attente d'être remplis",
       "Male": "Homme",
       "Female": "Femme",
